--- a/src/main/resources/templates/withdraw.html
+++ b/src/main/resources/templates/withdraw.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-<div th:replace="/fragments/header :: header" />
-</head>
+<!-- <div th:replace="/fragments/header :: header" />
+ --></head>
 <body>
 	<div class="container">
 
