--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,7 +72,22 @@
 
 	<footer th:replace="/fragments/footer :: footer"></footer>
 
-	<div th:replace="/fragments/footer :: script"></div>
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"
+		th:src="@{js/jquery-3.3.1.min.js}"></script>
+		<!-- Bootstrap tooltips -->
+		<script type="text/javascript" src="js/popper.min.js"
+		th:src="@{js/popper.min.js}"></script>
+		<!-- Bootstrap core JavaScript -->
+		<script type="text/javascript" src="js/bootstrap.min.js"
+		th:src="@{js/bootstrap.min.js}"></script>
+		<!-- MDB core JavaScript -->
+		<script type="text/javascript" src="js/mdb.min.js"
+		th:src="@{js/mdb.min.js}"></script>
+		<!-- Initializations -->
+		<script type="text/javascript">
+    // Animations initialization
+    new WOW().init();
+  </script>
 
 </body>
 
